app/assets/stylesheets/models/submissions.css.scss
:root {
  --d-feedback-diff-table-header-bg: var(--d-code-bg);
  --d-feedback-diff-table-header-fg: var(--d-on-background);
}

.submissions-table {
  th.status-column {
    width: 48px;
  }
}

.feedback-table {
  .tab-summary {
    flex-grow: 1;
    display: flex;
    align-self: center;

    .tab-summary-text {
      white-space: nowrap;
      font-weight: 500;
      margin-right: 4px;
    }

    .tab-summary-icons {
      flex-grow: 1;
      max-height: 40px;
      overflow: scroll;

      div {
        display: inline-flex;
        align-items: center;
        justify-content: center;
        width: 15px;
        height: 15px;
        border-radius: 50%;
        margin-right: 4px;

        a {
          color: var(--d-on-primary);
        }

        &.correct {
          background-color: var(--d-success);
        }

        &.wrong {
          background-color: var(--d-danger);
        }
      }
    }
  }

  .groups {
    .badge {
      display: block;
      text-align: left;
      border-left: 3px solid;
      border-radius: 0;
      margin-left: 0;
    }

    .badge.bg-danger {
      color: var(--d-danger);
      border-color: var(--d-danger);
      background-color: var(--d-surface) !important;
    }

    .badge.bg-success {
      color: var(--d-success);
      border-color: var(--d-success);
      background-color: var(--d-surface) !important;
    }
  }

  .description {
    background-color: var(--d-code-bg);

    pre {
      border: none;
    }
  }

  .group {
    &.card {
      box-shadow: none;
      border: 1px solid var(--d-divider);
      scroll-margin-top: calc(var(--d-navbar-height) + 50px + 64px + 5px);
      overflow: clip; // must be clip, hidden doesn't work with scroll-margin-top

      .card-title.card-title-colored-container {
        border-radius: 0;
        display: flex;
        flex-direction: row;
        align-items: center;

        .group-status {
          display: flex;
        }

        .btn {
          margin-top: -12px;
          margin-bottom: -12px;
        }

        .btn-collapse {
          transition: transform 0.2s ease-in-out;
        }
      }

      &:target .btn-collapse {
        pointer-events: none;
      }

      // if a group is the target, never collapse
      &.collapsed:not(:target) {
        .card-supporting-text {
          display: none;
        }

        .btn-collapse {
          transform: rotate(90deg);
        }
      }

      &.correct {
        border-color: var(--d-success);

        .group-status {
          color: var(--d-green);
        }
      }

      &.wrong {
        border-color: var(--d-danger);

        .group-status {
          color: var(--d-red);
        }
      }
    }

    &:target {
      border-width: 2px;
    }
  }

  .testcase {
    >.description {
      margin-left: -11px;
    }

    .indicator {
      width: 15px;
      height: 15px;
      margin: 0 6px 3px 1px;
      float: left;

      span {
        margin: auto;
      }
    }

    &>div {
      margin-bottom: 3px;
      margin-left: 12px;
    }

    &.correct {
      .indicator {
        color: var(--d-success);
      }
    }

    &.wrong {
      .indicator {
        color: var(--d-danger);
      }
    }
  }

  .test .output,
  .code {
    font-family: var(--d-font-monospace);
    font-size: 13px;
    white-space: pre-wrap;
    overflow-wrap: break-word;
  }

  table.diff {
    overflow: auto;
    font-size: 13px;
    margin: 0;
    padding: 0;
    width: 100%;

    td {
      vertical-align: top;
    }

    td.line-nr {
      text-align: right;
      white-space: pre-wrap;
    }

    th {
      font-weight: normal;
      padding-left: 5px;
      padding-right: 5px;
      background: var(--d-feedback-diff-table-header-bg);
      color: var(--d-feedback-diff-table-header-fg);
      vertical-align: center;
    }

    .del,
    .ins,
    .unchanged {
      text-decoration: none;
      padding-left: 5px;
      padding-right: 5px;
      overflow-wrap: anywhere;
      word-break: break-all;
      white-space: pre-wrap;
      font-family: var(--d-font-monospace);

      strong {
        font-weight: normal;
        border-radius: 0.2em;
      }
    }

    .ins {
      background: var(--d-success-container);
      color: var(--d-on-success-container);
    }

    .del {
      background: var(--d-danger-container);
      color: var(--d-on-success-container);
    }

    .ins strong {
      background: var(--d-success);
      color: var(--d-on-success);
    }

    .del strong {
      background: var(--d-danger);
      color: var(--d-on-danger);
    }

    .line-nr {
      background: var(--d-feedback-diff-table-header-bg);
      color: var(--d-feedback-diff-table-header-fg);
      padding-left: 10px;
      padding-right: 10px;
    }

    .line-nr:empty::before {
      content: " ";

      /* make sure the line-height is respected */
    }

    .output {
      width: 100%;
    }

    .ins-output,
    .del-output {
      width: 50%;
      max-width: 50%;
    }

    .tr {
      padding: 0;
      margin: 0;
      line-height: 1;
    }
  }

  table.diff.csv-diff {

    td,
    .del,
    .ins,
    .unchanged {
      padding: 2px 6px;
      white-space: pre;
    }

    td.line-nr,
    th.line-nr {
      position: sticky;
      left: 0;
      vertical-align: top;
      text-align: right;
    }
  }

  .diffs .unified-diff,
  .diffs .split-diff {
    display: none;
  }

  .diffs.show-unified .unified-diff,
  .diffs.show-split .split-diff {
    display: table;
  }

  .diffs.show-split .split-diff.csv-diff {
    display: inline-block;
    width: 50%;
    vertical-align: top;
  }

  .diffs.show-unified .unified-diff.csv-diff,
  .test-accepted .diffs .diff {
    display: inline-block;
  }

  .feedback-table-options {
    margin-bottom: 1em;
    width: 100%;
    display: flex;

    &.sticky {
      margin-bottom: 0;
      margin-top: -16px;
      padding-bottom: 12px;
      padding-top: 12px;
      position: sticky;
      top: 101px;
      z-index: 4;
      background-color: var(--d-surface);
    }

    .switch-buttons {
      margin-left: 1em;
      white-space: nowrap;

      span {
        margin-right: 0.5em;
      }
    }

    .diff-switch-buttons {
      align-self: flex-end;
    }
  }

  .description p {
    margin-bottom: 0;
  }

  .linter pre {
    border: none;
  }

  .linter pre.lineno {
    border-right: 1px solid var(--d-divider);
    padding-right: 25px;
  }

  .linter td.code {
    width: 100%;
  }

  .linter .lint-errors {
    list-style-type: none;
    padding-left: 5px;
  }

  .lint-errors .code {
    margin-left: 30px;
  }

  .code.wrong {
    background: #ffeeee;
    color: #bb0000;
  }

  .code.correct {
    background: #ddffdd;
    color: #008800;
  }

  .feedback-table-messages {
    margin-bottom: 9.5px;
  }

  .row>.messages {
    margin-left: 1em;
    margin-right: 1em;
  }

  .message-zeus,
  .message-staff {
    border-left: 3px solid var(--d-on-surface-muted);
    padding-left: 25px;
  }

  .message-zeus::before,
  .message-staff::before,
  .tab-zeus::before,
  .tab-staff::before {
    /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
    font: normal normal normal 24px/1 "Material Design Icons";
    color: var(--d-on-surface-muted);
    font-size: 18px;
  }

  .message-zeus::before,
  .message-staff::before {
    position: absolute;
    left: 22px;
  }

  .tab-zeus::before,
  .tab-staff::before {
    padding-right: 7px;
  }

  .message-zeus::before,
  .tab-zeus::before {
    content: "\F0032";
  }

  .message-staff::before,
  .tab-staff::before {
    content: "\F0474";
  }

  .message-zeus+.message-zeus::before,
  .message-staff+.message-staff::before {
    content: "";
  }

  .tab-link-marker {
    background: var(--d-warning) !important;
  }
}

iframe.file {
  border: none;
}

/* stylelint-disable-next-line selector-class-pattern */
.ace_gutter-cell {
  background-position: 2px top !important;
}

.colored-correct {
  color: var(--d-success);
}

.colored-wrong {
  color: var(--d-danger);
}

.colored-warning {
  color: var(--d-warning);
}

.colored-secondary {
  color: var(--d-on-surface-muted);
}

.submission-summary {
  .status-icon {
    padding-right: 6px;
  }

  .status-line,
  .byline,
  .description,
  .score {
    display: block;
  }

  .description {
    margin-bottom: 6px;
  }

  .edit-score {
    margin-left: 10px;
  }
}

.score-details {
  padding-bottom: 10px;
}

.submission-history {
  display: flex;
  max-height: 75px;
  overflow-y: auto;
  margin-bottom: 12px;

  .timestamp-col {
    text-align: right;
    margin-right: 0.5em;
  }

  .submission-history-row {
    display: inline-block;

    &.current-submission {
      font-weight: bold;
    }
  }

  .submission-link {
    min-width: 24px;
    display: inline-block;
    margin-right: 6px;
  }
}

